# daozang-alpha-suite

./: .gitignore  README.md
beichen-alpha/: .gitignore  README.md  pyproject.toml
beichen-alpha/config/: local.env.example  macro_events.csv  macro_policy_pages.csv  macro_rss_feeds.csv  profile_overrides.csv
beichen-alpha/docs/: architecture.md  free_data_sources.md  macro_event_factor.md  stock_profile_schema.md
beichen-alpha/launchd/: com.yancy.beichen-alpha.daily.plist  com.yancy.beichen-alpha.focus0955.plist  com.yancy.beichen-alpha.focus10.plist  com.yancy.beichen-alpha.pool1540.plist  com.yancy.beichen-alpha.position1030.plist
beichen-alpha/scripts/: beichen_chat_server.sh  beichen_daily_feishu.sh  beichen_daily_refresh_pool.sh  beichen_data_prewarm.sh  beichen_focus_pool_feishu.sh  beichen_focus_pool_seed.sh  beichen_position_review_feishu.sh  beichen_trade_plan_feishu.sh  feishu_send.sh  feishu_test.sh  server_daily_run.sh  server_healthcheck.sh
beichen-alpha/tests/: test_chat_router.py  test_data_prewarm.py  test_decision_actions.py  test_engine.py  test_expectation_factor.py  test_release_score.py  test_strategy_performance.py  test_strategy_playbook.py
daozang-alpha/: .gitignore  README.md  pyproject.toml
daozang-alpha/config/: daozang.example.toml  local.env.example
daozang-alpha/docs/: architecture.md  data-sources.md  feasibility.md  investment-xiake-architecture.md  research-plan.md  todo.md  xiake-rules.md
daozang-alpha/scripts/: fix_lightgbm_libomp.sh  setup_chenditc_qlib_data.sh
daozang-alpha/tests/: test_baseline.py  test_config.py  (+5 more)
(+117 files in other folders)
